--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 		
 
 
-		
+		<div class="titre">
+			
+		</div>
 		<div class="dots"></div>
 
 
-		<div class="arrow arrow_left">&larr;</div>
-		<div class="arrow arrow_right">&rarr;</div>
+		<div class="arrow arrow_left"><img src="./assets/images/arrow_left.png"></div>
+		<div class="arrow arrow_right"><img src="./assets/images/arrow_right.png"></div>
 	</div>
 	<section id="about-us" class="container">
 		<div>
